--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery.repeater",
+  "name": "jquery.repeater.fixed",
   "version": "1.2.2",
   "description": "repeatable form input interface",
   "main": "jquery.repeater.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/DubFriend/jquery.repeater"
+    "url": "git+https://github.com/DubFriend/jquery.repeater.git"
   },
   "keywords": [
     "input",
