--- a/package.json
+++ b/package.json
@@ -1,36 +1,22 @@
 {
-  "name": "jquery.repeater.fixed",
+  "name": "@vadim.podlevsky/jquery.repeater",
   "version": "1.2.2",
-  "description": "repeatable form input interface",
+  "description": "jquery.repeater fixed",
   "main": "jquery.repeater.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DubFriend/jquery.repeater.git"
+    "url": "git+https://github.com/Vadim-Podlevsky/jquery.repeater.git"
   },
-  "keywords": [
-    "input",
-    "repeat",
-    "multiple",
-    "form"
-  ],
-  "author": "Brian Detering <BDeterin@gmail.com> (http://www.briandetering.net/)",
-  "license": "MIT",
+  "author": "Brian Detering",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/DubFriend/jquery.repeater/issues"
+    "url": "https://github.com/Vadim-Podlevsky/jquery.repeater/issues"
   },
-  "homepage": "https://github.com/DubFriend/jquery.repeater",
-  "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-qunit": "^1.2.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-preprocess": "^5.1.0"
-  }
+  "homepage": "https://github.com/Vadim-Podlevsky/jquery.repeater#readme"
 }
